--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,16 +39,17 @@ jobs:
       - name: Test sdist
         run: |
           uv venv --python ${{ env.PYTHON_VERSION }} .venv-test
-          uv pip install dist/*.tar.gz
-          uv run python -c 'import durable_monty'
-          rm -rf .venv-test
+          source .venv-test/bin/activate
+          pip install dist/*.tar.gz
+          python -c 'import durable_monty'
 
       - name: Test wheel
         run: |
-          uv venv --python ${{ env.PYTHON_VERSION }} .venv-test
-          uv pip install dist/*.whl
-          uv run python -c 'import durable_monty'
           rm -rf .venv-test
+          uv venv --python ${{ env.PYTHON_VERSION }} .venv-test
+          source .venv-test/bin/activate
+          pip install dist/*.whl
+          python -c 'import durable_monty'
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
